--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="background-color:powderblue;">
 <table>
   <tr>
-    <td>  <img height="350"src="https://images.pexels.com/photos/6969040/pexels-photo-6969040.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="car"></td>
+    <td>  <img height="350"src="https://images.pexels.com/photos/6969040/pexels-photo-6969040.jpeg" alt="car"></td>
     <td>    <h1 style="color:purple;">Adex global</h1>
         <p><i>Taking your car to the <strong><a href="https://www.pexels.com/photo/a-black-mercedes-benz-6152812/">future</a></strong>.</i></p>
         <h4><p>We are auto designers specialized in car upgrade</p></h4></td>
